<?xml version="1.0" encoding="utf-8"?><!-- Load the toolbar here -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include xmlns:android="http://schemas.android.com/apk/res/android"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <fragment
        android:id="@+id/master_list_steps"
        android:name="com.example.android.bakingapp.fragments.StepMasterListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/list_padding"
        tools:context="com.example.android.bakingapp.activities.StepActivity"/>

</FrameLayout>

